<resources>
    <string name="app_name">AndreaBerronesAndroid2019</string>
    <string name="tap_score">Your Score: %s</string>
    <string name="time_left">Time Left: %s</string>
    <string name="btn_tap">Tap Me</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_email">Email</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="login">Login</string>
    <string name="cancelar">Cancelar</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
</resources>
