<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="string/hint_nombre"
    />
    <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
    />
    <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contraseña"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/btnDialogLoggin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login"
        />
        <Button
                android:id="@+id/btnDialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cancelar"
        />

    </LinearLayout>
</LinearLayout>
